--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
   <title>Gerenciador de Tarefas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./assets/appstyles.css">
 </head>
 
 <body>
   <main>
-      <div class="darkModeToggle">
+    <!-- <div class="darkModeToggle">
         <input type="checkbox" id="darkmode-toggle" />
         <label for="darkmode-toggle" id="darkModeToggle">
           <svg version="1.1" class="sun" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
@@ -59,7 +59,73 @@
           	c-6.337-2.108-11.473-6.557-14.463-12.528C11.899,15.541,11.11,10.16,12.002,4.936z" />
           </svg>
         </label>
-      </div>
+      </div> -->
+    <div class="container-xxl">
+      <section class="loginPage p-5">
+        <form class="formLoginPage">
+          <div class="mb-3">
+            <label class="form-label" for="inputUserName">
+              Usuário
+            </label>
+            <input class="form-control formInputs" id="inputUserName" />
+            <small></small>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label" for="inputPasswordUser">
+              Senha
+            </label>
+            <input class="form-control formInputs" id="inputPasswordUser" type="password" />
+            <small></small>
+          </div>
+          <div class="row d-flex justify-content-between">
+            <div class="col-2">
+              <button type="button" class="loginUserButton">
+                Logar
+              </button>
+            </div>
+            <div class="col-2">
+              <button type="button" class="registerUserButton">
+                Cadastrar
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
+      <section class="registerPage p-5">
+        <form class="formRegisterPage">
+          <div class="mb-3">
+            <label class="form-label" for="inputUserNameRegister">
+              Usuário
+            </label>
+            <input class="form-control formInputs" id="inputUserNameRegister" />
+            <small></small>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label" for="inputPasswordUserRegister">
+              Senha
+            </label>
+            <input class="form-control formInputs" id="inputPasswordUserRegister" type="password" />
+            <small></small>
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="inputPasswordUserConfirmRegister">
+              Confirme a senha
+            </label>
+            <input class="form-control formInputs" id="inputPasswordUserConfirmRegister" type="password" />
+            <small></small>
+          </div>
+          <div class="row text-center">
+            <div class="col-12">
+              <button type="button" class="registerUserButton">
+                Cadastrar
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
+    </div>
     <div class="container-xxl d-flex test">
       <div class="firstVerticalRetangle">
       </div>
@@ -155,6 +221,7 @@
             </select>
             <small></small>
           </div>
+          <div class="h5 col-12 mb-5 text-center responseAPI"></div>
         </form>
         <div class="row d-flex justify-content-between">
           <div class="col-2">
@@ -171,7 +238,7 @@
       </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
