--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gerenciador de Tarefas</title>
+    <style>
+      option:hover {
+        background-color: #2c2661;
+        color: white;
+      }
+    </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/appstyles.css" />
+  </head>
 
-  <title>Gerenciador de Tarefas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/appstyles.css">
-</head>
-
-<body>
-  <main>
-    <!-- <div class="darkModeToggle">
+  <body>
+    <main>
+      <!-- <div class="darkModeToggle">
         <input type="checkbox" id="darkmode-toggle" />
         <label for="darkmode-toggle" id="darkModeToggle">
           <svg version="1.1" class="sun" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
@@ -59,7 +69,7 @@
           	c-6.337-2.108-11.473-6.557-14.463-12.528C11.899,15.541,11.11,10.16,12.002,4.936z" />
           </svg>
         </label>
-      </div> -->
+      </div> 
     <div class="container-xxl">
       <section class="loginPage p-5">
         <form class="formLoginPage">
@@ -125,120 +135,102 @@
           </div>
         </form>
       </section>
-    </div>
-    <div class="container-xxl d-flex test">
-      <div class="firstVerticalRetangle">
-      </div>
-      <div class="secondVerticalRetangle">
-      </div>
-      <div class="container pt-5 appContainer">
-        <div class="row mt-5 logo">
-          <img src="/assets/logo.svg" alt="Arnia Logo">
-        </div>
-        <div class="row mt-5">
-          <ul class="list-inline d-flex align-items-center">
-            <li class="list-inline-item align-self-stretch">
-              <img src="./assets/clipboardicon.svg">
-            </li>
-            <li class="list-inline-item h4 appName">
-              Gerenciador de Tarefas
-            </li>
-          </ul>
-        </div>
-        <div class="row mb-5">
-          <div class="col-12">
-            <button type="button" class="openModalNewTaskButton">
-              +Adicionar nova tarefa
-            </button>
+    </div> -->
+      <div class="container-fluid d-flex">
+        <div class="firstVerticalRetangle"></div>
+        <div class="secondVerticalRetangle"></div>
+        <div class="container-xxl appContainer">
+          <div class="row logo">
+            <img src="./assets/logo.svg" alt="Arnia Logo" />
+          </div>
+          <div class="row mt-3 p-4 pb-0">
+            <ul class="list-inline d-flex align-items-center">
+              <li class="list-inline-item align-self-stretch">
+                <img src="./assets/clipboardicon.svg" />
+              </li>
+              <li class="list-inline-item h4 appName">
+                Gerenciador de Tarefas
+              </li>
+            </ul>
+          </div>
+          <div class="row mb-5">
+            <div class="col-12">
+              <button type="button" class="openModalNewTaskButton">
+                + Adicionar nova tarefa
+              </button>
+            </div>
+          </div>
+          <div class="table-responsive">
+            <table class="table table-borderless table-hover">
+              <thead>
+                <tr>
+                  <th>Núm</th>
+                  <th>Descrição</th>
+                  <th>Data de entrega</th>
+                  <th>Status</th>
+                  <th>Ação</th>
+                </tr>
+              </thead>
+              <tbody class="tableTasksBody"></tbody>
+            </table>
           </div>
         </div>
-        <div class="table-responsive">
-          <table class="table table-borderless table-hover">
-            <thead>
-              <tr>
-                <th>Núm</th>
-                <th>Descrição</th>
-                <th>Data de entrega</th>
-                <th>Status</th>
-                <th>Ação</th>
-              </tr>
-            </thead>
-            <tbody class="tableTasksBody">
-            </tbody>
-          </table>
+        <div class="polygonContainer">
+          <div class="polygon">&nbsp;</div>
         </div>
       </div>
-      <div class="polygonContainer">
-        <div class="polygon">&nbsp;</div>
-      </div>
-    </div>
 
-    <div class="container-xxl registerTaskModal editTaskModal">
-
-      <div class="container p-5 m-auto mt-5 form">
-        <div class="row mb-4 modalTitle h3">
-          Test
-        </div>
-        <form>
+      <div class="container-fluid registerTaskModal editTaskModal">
+        <form class="form d-block p-5">
+          <div class="row mb-4 modalTitle h3"></div>
           <div class="mb-3">
-            <label class="form-label" for="inputNumber">
-              Número
-            </label>
+            <label class="form-label" for="inputNumber"> Número </label>
             <input class="form-control formInputs" id="inputNumber" />
             <small></small>
           </div>
 
           <div class="mb-3">
-            <label class="form-label" for="inputDescription">
-              Descrição
-            </label>
+            <label class="form-label" for="inputDescription"> Descrição </label>
             <input class="form-control formInputs" id="inputDescription" />
             <small></small>
           </div>
 
           <div class="col-4 mb-3">
-            <label class="form-label" for="inputDate">
-              Data
-            </label>
-            <input class="form-control text-center formInputs" id="inputDate" placeholder="DD/MM/AAAA" />
+            <label class="form-label" for="inputDate"> Data </label>
+            <input
+              class="form-control text-center formInputs"
+              id="inputDate"
+              placeholder="DD/MM/AAAA"
+            />
             <small></small>
           </div>
           <div class="mb-5 col-4">
-            <label class="form-label" for="inputTaskStatus">
-              Status
-            </label>
+            <label class="form-label" for="inputTaskStatus"> Status </label>
             <select class="form-select formInputs" id="taskStatusInput">
               <option selected></option>
-              <option value="Concluído">
-                Concluído
-              </option>
-              <option value="Em andamento">
-                Em andamento
-              </option>
-              <option value="Parado">
-                Parado
-              </option>
+              <option onclick="" value="Concluído">Concluído</option>
+              <option value="Em andamento">Em andamento</option>
+              <option value="Parado">Parado</option>
             </select>
             <small></small>
           </div>
           <div class="h5 col-12 mb-5 text-center responseAPI"></div>
+          <div class="row d-flex justify-content-between">
+            <div class="col-6">
+              <a href="" class="closeModalButton"> Cancelar </a>
+            </div>
+            <div class="col-6 text-end">
+              <button type="button" class="modalEventButton">Salvar</button>
+            </div>
+          </div>
         </form>
-        <div class="row d-flex justify-content-between">
-          <div class="col-2">
-            <a href="" class="closeModalButton">
-              Cancelar
-            </a>
-          </div>
-          <div class="col-2">
-            <button type="button" class="modalEventButton">
-              Salvar
-            </button>
-          </div>
-        </div>
       </div>
-  </main>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
-</body>
-
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js"></script>
+  </body>
 </html>
