--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Gerenciador de Tarefas</title>
-    <style>
-      option:hover {
-        background-color: #2c2661;
-        color: white;
-      }
-    </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,74 +63,99 @@
           	c-6.337-2.108-11.473-6.557-14.463-12.528C11.899,15.541,11.11,10.16,12.002,4.936z" />
           </svg>
         </label>
-      </div> 
-    <div class="container-xxl">
-      <section class="loginPage p-5">
-        <form class="formLoginPage">
-          <div class="mb-3">
-            <label class="form-label" for="inputUserName">
-              Usuário
-            </label>
-            <input class="form-control formInputs" id="inputUserName" />
-            <small></small>
-          </div>
+      </div> -->
 
-          <div class="mb-3">
-            <label class="form-label" for="inputPasswordUser">
-              Senha
-            </label>
-            <input class="form-control formInputs" id="inputPasswordUser" type="password" />
-            <small></small>
-          </div>
-          <div class="row d-flex justify-content-between">
-            <div class="col-2">
-              <button type="button" class="loginUserButton">
-                Logar
-              </button>
+      <div class="container-xxl">
+        <section class="loginPage p-5">
+          <form class="p-4 m-auto formLoginPage">
+            <div class="mb-3">
+              <div class="h3">Bem-vindo ao Gerenciador de Tarefas!</div>
             </div>
-            <div class="col-2">
-              <button type="button" class="registerUserButton">
-                Cadastrar
-              </button>
-            </div>
-          </div>
-        </form>
-      </section>
-      <section class="registerPage p-5">
-        <form class="formRegisterPage">
-          <div class="mb-3">
-            <label class="form-label" for="inputUserNameRegister">
-              Usuário
-            </label>
-            <input class="form-control formInputs" id="inputUserNameRegister" />
-            <small></small>
-          </div>
 
-          <div class="mb-3">
-            <label class="form-label" for="inputPasswordUserRegister">
-              Senha
-            </label>
-            <input class="form-control formInputs" id="inputPasswordUserRegister" type="password" />
-            <small></small>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="inputPasswordUserConfirmRegister">
-              Confirme a senha
-            </label>
-            <input class="form-control formInputs" id="inputPasswordUserConfirmRegister" type="password" />
-            <small></small>
-          </div>
-          <div class="row text-center">
-            <div class="col-12">
-              <button type="button" class="registerUserButton">
-                Cadastrar
-              </button>
+            <div class="mb-3">
+              <label class="form-label" for="inputUserName"> Usuário </label>
+              <input class="form-control formLoginInputs" id="inputUserName" />
+              <small></small>
             </div>
-          </div>
-        </form>
-      </section>
-    </div> -->
-      <div class="container-fluid d-flex">
+
+            <div class="mb-3">
+              <label class="form-label" for="inputPasswordUser"> Senha </label>
+              <input
+                class="form-control formLoginInputs"
+                id="inputPasswordUser"
+                type="password"
+              />
+              <small></small>
+            </div>
+            <div class="row d-flex justify-content-between">
+              <div class="col-6">
+                <button type="button" class="loginUserButton"> Logar </a>
+              </div>
+              <div class="col-6 text-end">
+                <button type="button" class="registerUserButton">Cadastrar</button>
+              </div>
+            </div>
+          </form>
+        </section>
+
+        <section style="display: none" class="registerPage p-5">
+          <form class="p-4 m-auto formRegisterPage">
+            <div class="mb-3">
+              <div class="h3">Registre-se no Gerenciador de Tarefas!</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label" for="inputName"> Nome </label>
+              <input class="form-control formRegisterInputs" id="inputName" />
+              <small></small>
+            </div>
+  
+            <div class="mb-3">
+              <label class="form-label" for="inputUserNameRegister">
+                Usuário
+              </label>
+              <input
+                class="form-control formRegisterInputs"
+                id="inputUserNameRegister"
+              />
+              <small></small>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label" for="inputPasswordUserRegister">
+                Senha
+              </label>
+              <input
+                class="form-control formRegisterInputs"
+                id="inputPasswordUserRegister"
+                type="password"
+              />
+              <small></small>
+            </div>
+            <div class="mb-3">
+              <label class="form-label" for="inputPasswordUserConfirmRegister">
+                Confirme a senha
+              </label>
+              <input
+                class="form-control formRegisterInputs"
+                id="inputPasswordUserConfirmRegister"
+                type="password"
+              />
+              <small></small>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <a class="closeModalButton"> Cancelar </a>
+              </div>
+              <div class="col-6 text-end">
+                <button type="button" class="registerButton">
+                  Cadastrar
+                </button>
+              </div>
+            </div>
+          </form>
+        </section>
+      </div>
+      <div class="container-fluid d-flex" id="taskMenager">
         <div class="firstVerticalRetangle"></div>
         <div class="secondVerticalRetangle"></div>
         <div class="container-xxl appContainer">
