--- a/taskmenager.html
+++ b/taskmenager.html
@@ -69,13 +69,17 @@
         <div class="firstVerticalRetangle"></div>
         <div class="secondVerticalRetangle"></div>
         <div class="container-xxl appContainer">
+          <div class="row">
+            <div class="h4 col-11 text-end" id="divUser"></div>
+            <div class="h4 col-1" id="logoutButton">Sair</div>
+          </div>
           <div class="row logo">
-            <img src="./images/assets/logo.svg" alt="Arnia Logo" />
+            <img src="./assets/images/logo.svg" alt="Arnia Logo" />
           </div>
           <div class="row mt-3 p-4 pb-0">
             <ul class="list-inline d-flex align-items-center">
               <li class="list-inline-item align-self-stretch">
-                <img src="./images/assets/clipboardicon.svg" />
+                <img src="./assets/images/clipboardicon.svg" />
               </li>
               <li class="list-inline-item h4 appName">
                 Gerenciador de Tarefas
