--- a/taskmenager.html
+++ b/taskmenager.html
@@ -71,7 +71,7 @@
         <div class="container-xxl appContainer">
           <div class="row">
             <div class="h4 col-11 text-end" id="divUser"></div>
-            <div class="h4 col-1" id="logoutButton">Sair</div>
+            <div class="h4 col-1 text-end" id="logoutButton">Sair</div>
           </div>
           <div class="row logo">
             <img src="./assets/images/logo.svg" alt="Arnia Logo" />
