--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 
   <body>
     <main>
-      <div class="container-xxl">
+      <div class="container-l d-flex">
+        <div class="firstVerticalRetangle"></div>
+        <div class="secondVerticalRetangle"></div>
+        <div class="row m-5 logo">
+          <img src="./assets/images/logo.svg" alt="Arnia Logo" />
+        </div>
         <section class="loginPage p-5" id="loginPage">
           <form class="p-4 m-auto formLoginPage">
             <div class="mb-3">
@@ -112,6 +117,9 @@
             </div>
           </form>
         </section>
+        <div class="polygonContainer">
+          <div class="polygon">&nbsp;</div>
+        </div>
       </div>
     </main>
     <script
