--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row m-5 logo">
           <img src="./assets/images/logo.svg" alt="Arnia Logo" />
         </div>
-        <section class="loginPage p-5" id="loginPage">
+        <section class="loginPage p-5 animation" id="loginPage">
           <form class="p-4 m-auto formLoginPage">
             <div class="mb-3">
               <div class="h3">Bem-vindo ao Gerenciador de Tarefas!</div>
