style: containers size

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
   <body>
     <main>
-      <div class="container-l d-flex">
+      <div class="container-fluid d-flex">
         <div class="firstVerticalRetangle"></div>
         <div class="secondVerticalRetangle"></div>
         <div class="row m-5 logo">
           <img src="./assets/images/logo.svg" alt="Arnia Logo" />
         </div>
-        <section class="loginPage p-5 animation" id="loginPage">
+        <section class="loginPage p-5 animation container-lg" id="loginPage">
           <form class="p-4 m-auto formLoginPage">
             <div class="mb-3">
               <div class="h3">Bem-vindo ao Gerenciador de Tarefas!</div>
@@ -58,7 +58,7 @@
           </form>
         </section>
 
-        <section style="display: none" class="registerPage p-5">
+        <section style="display: none" class="registerPage p-5 container-lg">
           <form class="p-4 m-auto formRegisterPage">
             <div class="mb-3">
               <div class="h3">Registre-se no Gerenciador de Tarefas!</div>
