--- a/taskmenager.html
+++ b/taskmenager.html
@@ -1,4 +1,4 @@
-''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -13,6 +13,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
   </head>
 
   <body>
@@ -77,7 +81,11 @@
             >
               Atrasadas
             </button>
-            <input type="text" id="findTasksInput" />
+            <input
+              type="text"
+              id="findTasksInput"
+              placeholder="Buscar Tarefas"
+            />
           </div>
           <div class="table-responsive">
             <table class="table table-borderless table-hover">
